# Lazyvim-configs

./: .bash_history  .bashrc  .gitignore  README.md  init.lua  lazy-lock.json  lazyvim.json  omer.toml  pkgs.txt  starship.toml  termux-packages.txt
.config/chezmoi/: chezmoistate.boltdb
.config/nushell/: config.nu  env.nu  fzf.nu  history.txt
.config/nvim/: .luarc.json  README.md  init.lua  lazy-lock.json  lazyvim.json
.config/tmux/: tmux.conf
acli/: Cargo.toml  README.md
acli/src/: main.rs  new.rs
aichat/: config.yaml
configstore/update-notifier-@google/: gemini-cli.json
go/telemetry/: mode
helix/: config.toml
lazysql/: config.toml
lua/: community.lua  lazy_setup.lua
lua/config/: keymaps.lua  options.lua
lua/plugins/: astrocore.lua  ccc.lua  cmp-tabline.lua  cmp.lua  example.lua  mason.lua  telescope.lua  themes.lua  treesitter.lua  user.lua
nushell/: config.nu  env.nu  history.txt
nvim/: lazy-lock.json  lazyvim.json
nvim/lua/config/: keymaps.lua  options.lua
nvim/lua/plugins/: DEADJOE  alpha.lua  example.lua  fzf.lua  lualine.lua  md.lua  themes.lua
rustlings/exercises/01_variables/: variables1.rs  variables5.rs
rustlings/exercises/02_functions/: functions1.rs
rustlings/exercises/03_if/: if1.rs  if2.rs  if3.rs
rustlings/exercises/04_primitive_types/: primitive_types2.rs  primitive_types3.rs
rustlings/exercises/05_vecs/: vecs1.rs  vecs2.rs
rustlings/exercises/06_move_semantics/: move_semantics2.rs  move_semantics4.rs  move_semantics5.rs
rustlings/exercises/07_structs/: README.md  structs1.rs
tmux/: tmux.conf
(+16 files in other folders)
